--- a/errors/template.am
+++ b/errors/template.am
@@ -48,5 +48,6 @@ ERROR_TEMPLATES = \
 	templates/ERR_TOO_BIG \
 	templates/ERR_UNSUP_HTTPVERSION \
 	templates/ERR_UNSUP_REQ \
+	templates/ERR_URN_RESOLVE \
 	templates/ERR_WRITE_ERROR \
 	templates/ERR_ZERO_SIZE_OBJECT
