--- a/doc/release-notes/release-7.sgml.in
+++ b/doc/release-notes/release-7.sgml.in
@@ -34,6 +34,7 @@ The Squid-@SQUID_RELEASE@ change history can be <url url="https://github.com/squ
 	<item>Removed purge tool
 	<item>Remove deprecated languages
 	<item>Remove Ident protocol support
+	<item>Remove URN protocol support
 </itemize>
 
 <p>Most user-facing changes are reflected in squid.conf (see further below).
@@ -122,6 +123,14 @@ in the position of what used to be a %ui record field.
 
 <p>If necessary, an external ACL helper can be written to perform Ident transactions
 and deliver the user identity to Squid through the **user=** annotation.
+
+<sect1>Removed URN protocol support
+
+<p>Squid URN resolution code has been neglected for a very long time and caused
+multiple security vulnerabilities. This feature was rarely used (if at all).
+
+<p>If necessary, a similar feature can be implemented externally, using
+url_rewrite_program helpers or adaptation services.
 
 <sect>Changes to squid.conf since Squid-@SQUID_RELEASE_OLD@
 <p>
