--- a/.github/workflows/freebsd.yaml
+++ b/.github/workflows/freebsd.yaml
@@ -59,5 +59,5 @@ jobs:
         if: success() || failure()
         uses: actions/upload-artifact@v4
         with:
-          name: freebsd-build-logs
+          name: build-logs-freebsd-${{ matrix.osversion }}
           path: btlayer-*.log
