--- a/.github/workflows/quick.yaml
+++ b/.github/workflows/quick.yaml
@@ -136,7 +136,7 @@ jobs:
         uses: squid-cache/ccache-action@v1.2.14
         with:
           verbose: 2 # default 0
-          append-timestamp: false
+          append-timestamp: true
           key: ${{ github.job }}-${{ matrix.os }}-${{ matrix.compiler.CC }}-${{ matrix.layer.nick }}
 
       - name: Run build on Linux
