--- a/.github/workflows/slow.yaml
+++ b/.github/workflows/slow.yaml
@@ -60,7 +60,7 @@ jobs:
         uses: squid-cache/ccache-action@v1.2.14
         with:
           verbose: 2 # default 0
-          key: ${{ github.job }}-${{ matrix.os }}-${{ matrix.compiler.CC }}-${{ matrix.layer.nick }}
+          key: ${{ matrix.os }}-${{ matrix.compiler.CC }}-${{ matrix.layer.nick }}
 
       - name: Run test-builds
         id: test-builds
