--- a/.github/workflows/quick.yaml
+++ b/.github/workflows/quick.yaml
@@ -20,7 +20,7 @@ concurrency:
   # Cancel ongoing tests in case of push to the same PR or staging branch,
   # but let previous master commit tests complete.
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
-  cancel-in-progress: ${{ github.ref != 'master' }}
+  cancel-in-progress: ${{ github.ref != 'refs/heads/master' }}
 
 env:
   # empty except for pull_request events
