--- a/.github/workflows/quick.yaml
+++ b/.github/workflows/quick.yaml
@@ -139,9 +139,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Run build on Linux
-        run: |
-          echo "ref: ${{ github.ref }}"
-          ./test-builds.sh ${{ matrix.layer.name }}
+        run: ./test-builds.sh ${{ matrix.layer.name }}
 
       - name: Publish build logs
         if: success() || failure()
