--- a/.github/workflows/slow.yaml
+++ b/.github/workflows/slow.yaml
@@ -182,8 +182,8 @@ jobs:
           run: |
             export MAKE=gmake
             export CFLAGS='-Wno-compound-token-split-by-macro'
-            export CC=/usr/local/bin/ccache clang
-            export CXX=/usr/local/bin/ccache clang++
+            export CC=ccache clang
+            export CXX=ccache clang++
             ./test-builds.sh
 
       - name: Publish build logs
