--- a/.github/workflows/slow.yaml
+++ b/.github/workflows/slow.yaml
@@ -21,6 +21,7 @@ concurrency:
 
 jobs:
   linux-distros:
+    if: false
 
     strategy:
       matrix:
@@ -82,6 +83,7 @@ jobs:
   macos:
     runs-on: macos-14
     name: macos
+    if: false
 
     steps:
       - name: Install prerequisite MacOS packages
