revert tested layers selection
Co-authored-by: Alex Rousskov <rousskov@measurement-factory.com>

--- a/.github/workflows/slow.yaml
+++ b/.github/workflows/slow.yaml
@@ -175,7 +175,7 @@ jobs:
             export MAKE=gmake
             export CC=clang
             export CXX=clang++
-            ./test-builds.sh layer-00-default layer-01-minimal layer-02-maximus
+            ./test-builds.sh
 
       - name: Publish build logs
         if: success() || failure()
