--- a/.github/workflows/slow.yaml
+++ b/.github/workflows/slow.yaml
@@ -181,3 +181,20 @@ jobs:
         with:
           name: build-logs-freebsd-${{ matrix.osversion }}
           path: btlayer-*.log
+
+  coverity-scan:
+    runs-on: ubuntu-22.04
+    name: Scan with Coverity
+    steps:
+      - name: Checkout Sources
+        uses: actions/checkout@v4
+
+      - name: Coverity Full Scan
+        uses: synopsys-sig/synopsys-action@v1.13.0
+        with:
+          coverity_url: ${{ vars.COVERITY_URL }}
+          coverity_user: ${{ secrets.COVERITY_USER }}
+          coverity_passphrase: ${{ secrets.COVERITY_PASSPHRASE }}
+          coverity_project_name: ${{ github.event.repository.name }}
+          coverity_stream_name: ${{ github.event.repository.name }}-${{ github.ref_name }}
+          coverity_policy_view: 'Outstanding Issues'
