--- a/.github/workflows/slow.yaml
+++ b/.github/workflows/slow.yaml
@@ -205,8 +205,9 @@ jobs:
         run: |
           cov-build --dir cov-int ./test-builds.sh layer-02-maximus
           tar cfz cov-int.tar.gz cov-int
+          echo "user: ${coverity_user}"
           curl --form project=Squid \
             --form file=@cov-int.tar.gz \
-            --form token=${coverity_passphrase} \
-            --form email=$${coverity_user} \
+            --form token=${coverity_token} \
+            --form email=${coverity_user} \
             https://scan.coverity.com/builds
