figure out if token are getting passed

--- a/.github/workflows/slow.yaml
+++ b/.github/workflows/slow.yaml
@@ -203,7 +203,9 @@ jobs:
       - name: Coverity Full Scan
         if: ${{ env.coverity_user }} && ${{ env.coverity_token }}
         run: |
-          echo "user:  ${coverity_user}, token: ${coverity_token}"
+          echo "user: ${coverity_user}, token: ${coverity_token}"
+          echo -n "user size: "; echo ${coverity_user} | wc -c
+          echo -n "token size: "; echo ${coverity_token} | wc -c
           exit 0
           cov-build --dir cov-int ./test-builds.sh layer-02-maximus
           tar cfz cov-int.tar.gz cov-int
