try not specifying environment twice

--- a/.github/workflows/slow.yaml
+++ b/.github/workflows/slow.yaml
@@ -202,9 +202,9 @@ jobs:
 
       - name: Coverity Full Scan
         if: ${{ env.coverity_user }} && ${{ env.coverity_token }}
-        env:
-          coverity_user: ${{ secrets.COVERITY_USER }}
-          coverity_token: ${{ secrets.COVERITY_TOKEN }}
+        # env:
+        #   coverity_user: ${{ secrets.COVERITY_USER }}
+        #   coverity_token: ${{ secrets.COVERITY_TOKEN }}
 
         run: |
           cov-build --dir cov-int ./test-builds.sh layer-02-maximus
