better secret existence test

--- a/.github/workflows/slow.yaml
+++ b/.github/workflows/slow.yaml
@@ -202,7 +202,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Coverity Full Scan
-        if: ${{ env.coverity_user }} && ${{ env.coverity_token }}
+        if: ${{ env.coverity_user != '' }} && ${{ env.coverity_token != ''}}
 
         run: |
           cov-build --dir cov-int ./test-builds.sh layer-02-maximus
