--- a/.github/workflows/slow.yaml
+++ b/.github/workflows/slow.yaml
@@ -192,7 +192,6 @@ jobs:
     env:
       coverity_user: ${{ secrets.COVERITY_USER }}
       coverity_token: ${{ secrets.COVERITY_TOKEN }}
-    if: ${{ env.coverity_user != '' }} && ${{ env.coverity_token != '' }}
 
     container:
       image: squidcache/buildfarm-coverity:stable
@@ -203,7 +202,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Coverity Full Scan
-
+        if: env.coverity_user && env.coverity_token
         run: |
           cov-build --dir cov-int ./test-builds.sh layer-02-maximus
           tar caf cov-int.tar.xz cov-int
