--- a/.github/workflows/slow.yaml
+++ b/.github/workflows/slow.yaml
@@ -189,6 +189,8 @@ jobs:
   coverity-scan:
     name: Scan with Coverity
     runs-on: ubuntu-22.04
+    # this job only runs if the github repository contains username
+    # and password to access the Coverity Scan service
     env:
       coverity_user: ${{ secrets.COVERITY_USER }}
       coverity_token: ${{ secrets.COVERITY_TOKEN }}
