--- a/.github/workflows/coverity-scan.yaml
+++ b/.github/workflows/coverity-scan.yaml
@@ -7,7 +7,7 @@ name: Scheduled Tests
 
 on:
   schedule:
-    - cron: "42 3 * * 0"
+    - cron: "42 3 * * 0" # once a week
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -36,7 +36,6 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Scan
-        if: env.coverity_user && env.coverity_token
         run: |
           cov-build --dir cov-int ./test-builds.sh layer-02-maximus
           tar caf cov-int.tar.xz cov-int
