--- a/.github/workflows/coverity-scan.yaml
+++ b/.github/workflows/coverity-scan.yaml
@@ -1,7 +1,6 @@
-# Tests in this workflow are run periodically.
-# They are generally very expensive and not on the critical path
-# for development
-# scheduled workflows only run in the default branch
+# Coverity Scan service terms limit analysis requests frequency, 
+# and the service runs analysis in the background. Thus, we submit
+# default branch analysis requests on a schedule rather than testing PRs.
 
 name: Coverity Scan
 
