--- a/.github/workflows/openbsd.yaml
+++ b/.github/workflows/openbsd.yaml
@@ -56,7 +56,7 @@ jobs:
             export CFLAGS='-Wno-compound-token-split-by-macro'
             export LDFLAGS="-L/usr/local/lib"
             export PATH="$HOME/bin:$PATH"
-            ./test-builds.sh --verbose --use-config-cache layer-02-maximus # TODO: test all layers
+            ./test-builds.sh --verbose --aggressively-use-config-cache layer-02-maximus # TODO: test all layers
 
       - name: Publish build logs
         if: success() || failure()
