make build log name consistent
Co-authored-by: Alex Rousskov <rousskov@measurement-factory.com>

--- a/.github/workflows/slow.yaml
+++ b/.github/workflows/slow.yaml
@@ -237,5 +237,5 @@ jobs:
         if: success() || failure()
         uses: actions/upload-artifact@v4
         with:
-          name: openbsd-build-logs
+          name: build-logs-openbsd
           path: btlayer-*.log
